# AIUAS6-2020

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arbitre.cpp  arbitre.h  cmake_install.cmake  jeu.cpp  jeu.h  main.cpp  test
evaluations/: CMakeLists.txt  Xeval.cpp  ameliorations_possibles.txt  eval.cpp  eval.h
evalutations/: eval.h
joueurs/: CMakeLists.txt  Makefile  ab_nathan.cpp  ab_nathan.h  alphabeta_matthew.cpp  alphabeta_matthew.h  cmake_install.cmake  joueur_alphabeta_.cpp  joueur_manuel.cpp  joueur_manuel.h  matthew_alphabeta.cpp  search_matthew.cpp  search_matthew.h
return/: alphabeta_matthew.cpp  readme.txt
